[package]
name = "hyperschema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
rmp-serde = "1.3.0"
serde = "1.0.203"
tokio = "1.38.0"

[dependencies.specta]
version = "2.0.0-rc.13"
features = ["serde", "export", "function", "typescript"]
