[package]
name = "muonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12"
prost-types = "0.12"

[dependencies.specta]
version = "2.0.0-rc.13"
features = ["serde", "export", "function", "typescript"]

[build-dependencies]
prost-build = "0.12"
